# vote.electionscience.org

./: .env  .env.dist  .gitignore  .sourcery.yaml  .travis.yml  Dockerfile  Pipfile  README.md  Social_Auth_Configure.md  docker-compose.yml  entrypoint.sh  fly.pr-review.toml  fly.toml  manage.py  mise.toml  pyproject.toml  railway.json  requirements.txt  setup.cfg
.devcontainer/: Dockerfile
.github/workflows/: django.yml  fly-review.yml  fly.yml
.trunk/: trunk.yaml
.trunk/configs/: .bandit
approval_frame/: approval_frame_cron  backends.py  forms.py  mailchimp_api.py  settings.py  tests.py  urls.py  views.py  wsgi.py
approval_frame/middleware/: socialauth_middleware.py  timezone_middleware.py
approval_frame/scripts/: update_user_subscriptions.py
approval_frame/static/approval_polls/: create.js  detail.js  embed_instructions.js  my_polls.js  style.css
approval_frame/staticfiles/: create.js  detail.js  embed_instructions.js  my_polls.js  registration_form.js  style.css
approval_frame/templates/admin/: base_site.html
approval_frame/templates/registration/: activate.html  activation_complete.html  activation_email.txt  login.html  logout.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  registration_complete.html  registration_form.html  subscription_change_done.html  subscription_preferences.html  username_change_done.html  username_change_form.html
approval_polls/: .gitignore  .urls.py.swo  .views.py.swo  README.md  admin.py  backends.py  embedExample.html  forms.py  mailgun_backend.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
approval_polls/forms/: __init__.py  choice_form.py  poll_form.py
approval_polls/migrations/: 0001_initial.py  0002_poll_user.py  0003_auto_20150528_1004.py  0003_auto_20150803_1345.py  0003_ballot_user.py  0004_auto_20150803_1346.py  0004_poll_vtype.py  0005_auto_20150804_0911.py  0005_poll_close_date.py  0006_auto_20150804_1322.py  0006_poll_show_close_date.py  0007_poll_show_countdown.py  0007_poll_suspended.py  0008_poll_show_write_in.py  0009_poll_show_lead_color.py  0010_voteinvitation_poll_is_private.py  0011_choice_choice_link.py  0012_subscription.py  0013_poll_is_suspended.py  0014_polltag.py  0015_email_opt_in.py  0016_update_email_opt_in.py  0017_ballot_remove_unique_email.py  0018_auto_20230511_0246.py  0019_alter_ballot_timestamp.py
approval_polls/static/approval_polls/: .style.css.swo  create.js  detail.js  edit.js  embed_instructions.js  my_polls.js  style.css  (+2 more)
approval_polls/staticfiles/: create.js  detail.js  embed_instructions.js  fonts.css  my_polls.js  results.js  style.css
approval_polls/templates/: 403.html  404.html  base.html  create.html  detail.html  edit.html  embed_instructions.html  index.html  invitation_email_body.html  my_info.html  my_polls.html  poll_admin.html  public_base.html  results.html  tag_cloud.html
approval_polls/templatetags/: filters.py
approval_polls/tests/: test_polls.py  tests.py
docs/: Social_Auth_Configure.md
(+124 files in other folders)
