[tool.poetry]
name = "approval-frame"
version = "0.1.0"
description = ""
authors = ["Felix Sargent <felix@electionscience.org>"]
readme = "README.md"
packages = [{ include = "approval_polls" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5"
pytz = "^2023.4"
django-extensions = "^3.2.3"
djangoajax = "^3.3"
django-environ = "^0.11.2"
django-sendgrid-v5 = "^1.2.3"
gunicorn = "^22.0.0"
django-upgrade = "^1.15.0"
whitenoise = "^6.6.0"
django-structlog = "^7.1.0"
django-passkeys = "^1.2.7"
django-allauth = "^0.61.1"
djlint = "^1.34.1"
django-widget-tweaks = "^1.5.0"
sentry-sdk = { extras = ["django"], version = "^1.40.4" }
django-import-export = "^3.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
