[project]
name = "approval-frame"
version = "0.1.0"
description = ""
authors = [{ name = "Felix Sargent", email = "felix@electionscience.org" }]
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
  "django~=5.0.0",
  "pytz>=2023.4",
  "django-extensions>=3.2.3",
  "djangoajax>=3.3",
  "django-environ>=0.11.2",
  "django-sendgrid-v5>=1.2.3",
  "gunicorn>=22.0.0",
  "django-upgrade>=1.15.0",
  "whitenoise>=6.6.0",
  "django-structlog>=7.1.0",
  "django-allauth[socialaccount]>=65.3.1",
  "djlint>=1.34.1",
  "django-widget-tweaks>=1.5.0",
  "sentry-sdk[django]>=2.8.0",
  "pytest>=8.2.2",
  "pytest-django>=4.8.0",
  "django-compressor>=4.5.1",
  "django-libsass>=0.9",
  "django-import-export[all]>=4.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["approval_polls"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "approval_polls.settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.bandit]
exclude_dirs = ['*_test.py', '*/test_*.py', '*/tests.py']
skips = ["B106"]
